Fixed scroll overflow in fotter
Fixed scroll overflow in fotter

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -484,7 +484,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /*MASTER FOOTER*/
 
-.master-footer {}
+.master-footer {
+    overflow: hidden;
+    width: 100%;
+}
 .master-footer-left, .master-footer-right {
   padding: 100px;
 }
